# RayTracer

./: CMakeLists.txt
RayTracerSmall/: Forking.cpp  Forking.h  GlobalController.cpp  GlobalController.h  MemoryPool.cpp  MemoryPool.h  Object.cpp  ObjectForPool.cpp  ObjectForPool.h  Pool.cpp  Pool.h  Queue.h  RayTracer.cpp  RayTracer.h  RayTracerSmall.vcxproj  SafeThread.h  SafeThreadQueue.h  Sphere.h  ThreadManager.h  Threads.cpp  Threads.h  ThreadsManager.cpp  ThreadsManager.h  Tracker.cpp  Tracker.h  Vec3.h  main.cpp  spheres56.ppm
